assets/css/main.css
html, body{
	margin: 0;
	padding:0;
	font-family: 'Lato', sans-serif;
	background-color: #eaeaea;
}
html::-webkit-scrollbar{
	width: 5px;
	background-color: lightgrey;
}
html::-webkit-scrollbar-thumb{
	border-radius: 10px;
	background-color: steelblue;
	box-shadow: inset 0 0 5px rgba(0,0,0,0.4);
}

.removegridmargins{
	margin-left:0;
	margin-right: 0;
	padding-left: 0;
	padding-right:0;
}
#overlap{
	z-index: 3;
	margin-bottom: 300px;
	background-color: white;
}

@media screen and (max-width: 418px) {
  #overlap {z-index: 3;
	margin-bottom: 330px;
	background-color: white;}
}

.sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 11;
    top: 0;
    left: 0;
    background-color: #111;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
}

.sidenav ul li {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    transition: 0.3s;
}

.sidenav a:hover {
    color: #f1f1f1;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}
.closebtn{
	text-decoration: none;
}
.myburger{
	display: inline-block;
	top: 12.65vh;
	position: absolute;
	width: 100%;
	color: lightgrey;
	transition: 0.2s ease-in-out;
	/*background-color: lightgrey;*/
}
.burgerdiv div{
	height: 4px;
	background-color: #fff;
	border-radius: 20px;
	transition: 0.3s;
}
.burgerdiv{
	margin-top: 7px;
	margin-left: 20vw;
	cursor:pointer;
	display: inline-block;
	width: 30px;
}
.one{
	margin: 7px 0 4px 0;
	width:30px;
}
.two{
	margin: 0 0 4px 0;
	width: 20px;
}
.three{
	width: 25px;
}
.burgerdiv:hover div{
	width:30px;
}
.sticky {
 	position: fixed;
    top: 0;
    left:0;
    z-index: 10;
    color: black;
    background-color: white;
    transition: 0.2s ease-in-out;
}
.site-title{
	text-align: center;
	width: 56vw;
	display: inline-block;
	font-size: 1.5em;
	/*visibility: hidden;*/
	opacity: 0;
	transition: 0.1s ease-in-out;
}
.contact-me{ 
	display: inline-block;
	font-size: 1.5em;
	/*visibility: hidden;*/
	opacity: 0;
	transition: 0.2s ease-in-out;
}
#mail{
	color: black;
}

@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

#logo{
	position: relative;
	font-size: 100px;
	margin-bottom: 15vh;
	display: block;
    letter-spacing: -5px;
}

@media screen and (max-width: 767px){
	ul{
		list-style: none;
		font-size: 1.5em;
	}
}
#landing{
	color: white;
	overflow: hidden;
	background-image: url('../images/about.jpg');
	background-position: center;
	background-size: cover;
	height: 100vh;
	background-attachment: fixed;
	/*opacity: 0.8;*/
}

h1{
	text-align: center;
	/*position: absolute;*/
	margin-top: 20%;
	font-size: 4em;
	font-weight: 700;
	text-shadow: 1px 1px 8px rgba(0,0,0,0.3),
					0px 0px 20px rgba(0,0,0,0.2);
}
.links{
	/*background-color: pink;*/
	text-align: center;
	position: absolute;
	/*margin: 0 auto;*/
	/*padding: 0 auto;*/
	/*top:40vh;*/
	left:50%;
	width: 300px;
	margin-left: -150px;
}
.links a i{
	font-size: 3em;
	padding: 10px 10px;
	color: lightgrey;
	transition: 0.4s;
}
.links a:hover i{
	color: white;
	text-shadow: 1px 0px 8px rgba(0,0,0,0.3),
						0px 0 1px rgba(0,0,0,0.2);
}
.downarrow{
	position: absolute;
/*	background-color: pink;
*/	font-size: 3em;
	left: 48vw;
	top: 80vh;
	transition: 0.4s ease-in-out;
}
@media screen and (max-width: 767px){
	.downarrow{
		left: 45vw;
	}
}
.downarrow i{
	color: lightgrey;
	transition: 0.4s ease-in-out;
}
.downarrow:hover i{
	color: white;
	text-shadow: 1px 0px 8px rgba(0,0,0,0.3),
						0px 0 1px rgba(0,0,0,0.2);
}
.portfolioPage{
	padding-top: 3%;
	padding-bottom: 3%;
}
.innerHeading{
	font-size: 3em;
}
h3{
	text-align: center;
	text-shadow: 1px 1px 8px #565353;
	letter-spacing: 3px;
}
h4{
	font-weight: 700;
	font-size: 1.5em;
}
p{
	font-size: 1.5em;
}
hr{
	width: 300px;
	max-width: 80%;
	text-shadow: 1px 1px 8px #565353;
}
a{
	color:white;
	text-decoration: none;
}
a:hover{
	text-decoration: none;
	color: white;
}
#about,#skills,#interests{
	padding-top: 3%;
}

.portfolioWebsiteThumb{
	/*width:427px;*/
	width:427px;
	height:240px;
	max-width: 90vw;
	overflow-x: hidden;
	border-radius: 10px;
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	background-image: url('../images/WebsiteDisplayThumb.jpg');
	/*border-radius: 10px;
	box-shadow:  0px 25px 15px -10px rgba(0,0,0,0.5);
	transition: all ease-in-out 400ms;*/
}
.portfolioWebsiteThumb:hover{
	opacity: 0.8;	
}
.rgbGameWebsiteThumb{
	width:427px;
	height:240px;
	max-width: 90vw;
	overflow-x: hidden;
	border-radius: 10px;
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	background-image: url('../images/rgbGameThumb.png');
}
.rgbGameWebsiteThumb:hover{
	opacity: 0.8;
}
.fa-times{
	text-decoration: none;
	font-size: 0.8em;
}
.interestsPage{
	margin-top: 3%;
	margin-bottom: 3%;
}
.workPage{
	margin-top: 3%;
	margin-bottom: 3%;
	display: block;
}
.wrapper{
	display: inline-block;
}
.wrapper:hover{
	opacity: 0.8;
}
#instabutton:focus{
	text-decoration: none;
	color: white;
}
#instalogo{
	position: absolute;
	top: 36%;
	left: 38%;
	font-size: 5em;
	text-decoration: none;
}
#instalogo:focus{
	text-decoration: none;
	color: white;
}
@media screen and (max-width: 320px) {
  #instalogo{ top: 155px; left:40%; visibility: visible; }
}
@media screen and (min-width: 321px) and (max-width: 1447px) {
  #instalogo{ visibility: hidden;}
}
.instaImage{
	/*background-image: url('../images/insta1.jpg');*/
	width: 130px;
	height: 130px;
	background-size: cover;
	background-position: center;
	float: left;
	border: 1px solid #fefefa;
	display: block;
	border-radius: 10px;
}
#instaImg1{
	background-image: url('../images/insta1.jpg');
}
#instaImg2{
	background-image: url('../images/insta2.jpg');
}
#instaImg3{
	background-image: url('../images/insta3.jpg');
}
#instaImg4{
	background-image: url('../images/insta4.jpg');
}
#instaImg5{
	background-image: url('../images/insta5.jpg');
}
#instaImg6{
	background-image: url('../images/insta6.jpg');
}
#linkToCv{
	color: steelblue;
}
#linkToCv:active{
	color: steelblue;
	text-decoration: none;
}
.tele{
	color: white;
	font-size: 2em;
	padding-right: 10px;
	text-decoration: none;
}
.telephoneCTA{
	color: white;
	font-size: 4em;
	text-decoration: none;
}
.telephoneCTA:focus{
	color: white;
	text-decoration: none;
	border: none;
}
.tele:focus{
	color: white;
	text-decoration: none;
	border: none;
}
#contact{
	position: fixed;
	bottom: 0;
	padding-top: 2%;
	text-align: center;
	background-color: #050505;
	color: white;
	box-shadow: 600px 0 0 0 #050505,
				-600px 0 0 0 #050505;
	z-index: 0;
}

